# conan-and-subdirectory

./: .gitmodules  CMakeLists.txt  README.md  clang.cmake  clang.profile  gcc10-amd64-darwin.cmake  gcc10-amd64-darwin.profile  makefile
src/: main.cpp
